dataset1235/2025-2/1153765216/users/416059210/executions/3138746197_146336312.log
== RUN (2025-08-15 15:22:06)
-- CODE: 
print(50/3)
print(16*3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
48
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:24:46)
-- CODE: 
print(50/3)
print(50/3%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(50/3%)
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(50/3%)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:21:00)
-- CODE: 
print(50/3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:19:24)
-- CODE: 
print(50/3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:19:58)
-- CODE: 
print(50/3)
print(%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(%)
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(%)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:23:51)
-- CODE: 
print(50/3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:24:22)
-- CODE: 
print(50/3)
print(//%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(//%)
          ^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(//%)
          ^^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:22:39)
-- CODE: 
print(50/3)
print(1%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(1%)
            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(1%)
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:20:29)
-- CODE: 
print(50/3)(%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50/3)(%)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50/3)(%)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:20:40)
-- CODE: 
print(50/3)(%)(1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50/3)(%)(1)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50/3)(%)(1)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:25:02)
-- CODE: 
print(50/3)
print(50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:24:32)
-- CODE: 
print(50/3)
print(1//%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(1//%)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(1//%)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:20:25)
-- CODE: 
print(50/3)(%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50/3)(%)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50/3)(%)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:24:31)
-- CODE: 
print(50/3)
print(1//%)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(1//%)
             ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 2
    print(1//%)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:20:41)
-- CODE: 
print(50/3)(%)(1)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50/3)(%)(1)
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
-- ERROR:
File "XXXX", line 1
    print(50/3)(%)(1)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-15 15:25:25)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-15 15:25:22)
-- CODE: 
print(50//3)
print(50%3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- TEST CASE 2:
---- input:
xx
---- correct output:
16
2
---- user output:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
